--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+# Ignore Maven Wrapper files
+mvnw
+mvnw.cmd
+.mvn/wrapper/maven-wrapper.properties
 
 ### STS ###
 .apt_generated
