Added model classes and adjusted properties file for postgresql database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=HealthConnect Core
+
+spring.datasource.url=jdbc:postgresql://10.21.21.10:5432/HealthConnect
+spring.datasource.username=amova
+spring.datasource.password=wmsmanager
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
