--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,22 @@ spring.datasource.password=wmsmanager
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
+logging.level.org.flywaydb.core=DEBUG
+
+
+# Enable SQL logging
+spring.jpa.show-sql=true
+
+# Format SQL queries for better readability
+spring.jpa.properties.hibernate.format_sql=true
+
+# Log the SQL statements
+logging.level.org.hibernate.SQL=DEBUG
+
+# Log the parameters bound to the SQL queries
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+
