--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,13 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
-spring.flyway.baseline-on-migrate=true
 logging.level.org.flywaydb.core=DEBUG
+# Database connection settings
+
+
+# Flyway settings (optional if you want to specify schemas)
+spring.flyway.schemas=public
+spring.flyway.baseline-on-migrate=true
 
 
 # Enable SQL logging
